FIX: align topic progress to the right

--- a/app/assets/stylesheets/common/base/topic.scss
+++ b/app/assets/stylesheets/common/base/topic.scss
@@ -100,6 +100,7 @@
   grid-row: 1/1;
   grid-column: 2;
   align-self: end;
+  margin-left: auto;
   display: flex;
   right: 9px; // 8px padding on #main-outlet + 1px right border
   .topic-admin-menu-button-container {
